# genesis_prompts

./: .prompts  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
genesisprompts/: __init__.py  __main__.py  genesis.py  loader.py  prompt_loader.py  prompt_writer.py
tests/: test_loader.py  test_writer.py
