[project]
name = "genesis-prompts"
version = "0.4.0"
description = "A library used to log prompts for the purpose of proving that you are the author of a work you built using AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "pytest>=9.0.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
version_scheme = "semver"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
version_files = [
    "pyproject.toml:version"
]
